<resources>
    <string name="app_name">MyApplicationLanguageChange</string>
    <string name="pakistan">pakistan</string>
    <string name="islamabad">Islamabad</string>
    <string name="punjab">Punjab</string>
    <string name="go_to_next">go to next</string>
    <string name="lahore">Lahore</string>
    <string name="rawalpindi">Rawalpindi</string>
    <string name="kahuta">Kahuta</string>
    <string name="change_language">Change Language</string>


    <string-array name="Languages">
        <item>Select Language</item>
        <item>Pakistan</item>
        <item>India</item>
        <item>Usa</item>
        <item>saudia</item>
    </string-array>

</resources>