<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FristActivity">

    <TextView
        android:id="@+id/txtLah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lahore"
        android:layout_marginTop="25dp"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txtRwp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rawalpindi"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLah"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/txtKah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kahuta"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRwp"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/FristBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_next"
        app:layout_constraintTop_toBottomOf="@id/txtKah"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>