<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TextView
        android:id="@+id/txtPak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pakistan"
        android:layout_marginTop="25dp"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txtIsb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/islamabad"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPak"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/txtPUN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punjab"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtIsb"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>